# internal/p2p/server.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.35.1
+// 	protoc-gen-go v1.36.2
 // 	protoc        (unknown)
 // source: server.proto
 
@@ -84,6 +84,10 @@ const (
 	RequestType_ACCEPT   RequestType = 1
 	RequestType_SIGN     RequestType = 2
 	RequestType_FINALIZE RequestType = 3
+	// it could be a separate MsgType but it would clone logic of requests
+	RequestType_ACK             RequestType = 4
+	RequestType_NACK            RequestType = 5
+	RequestType_NO_DATA_TO_SIGN RequestType = 6
 )
 
 // Enum value maps for RequestType.
@@ -93,12 +97,18 @@ var (
 		1: "ACCEPT",
 		2: "SIGN",
 		3: "FINALIZE",
+		4: "ACK",
+		5: "NACK",
+		6: "NO_DATA_TO_SIGN",
 	}
 	RequestType_value = map[string]int32{
-		"KEYGEN":   0,
-		"ACCEPT":   1,
-		"SIGN":     2,
-		"FINALIZE": 3,
+		"KEYGEN":          0,
+		"ACCEPT":          1,
+		"SIGN":            2,
+		"FINALIZE":        3,
+		"ACK":             4,
+		"NACK":            5,
+		"NO_DATA_TO_SIGN": 6,
 	}
 )
 
@@ -130,11 +140,10 @@ func (RequestType) EnumDescriptor() ([]byte, []int) {
 }
 
 type StatusResponse struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Status        PartyStatus            `protobuf:"varint,1,opt,name=status,proto3,enum=PartyStatus" json:"status,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Status PartyStatus `protobuf:"varint,1,opt,name=status,proto3,enum=PartyStatus" json:"status,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *StatusResponse) Reset() {
@@ -175,14 +184,13 @@ func (x *StatusResponse) GetStatus() PartyStatus {
 }
 
 type SubmitRequest struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Sender        string                 `protobuf:"bytes,1,opt,name=sender,proto3" json:"sender,omitempty"`
+	SessionId     string                 `protobuf:"bytes,2,opt,name=sessionId,proto3" json:"sessionId,omitempty"`
+	Type          RequestType            `protobuf:"varint,3,opt,name=type,proto3,enum=RequestType" json:"type,omitempty"`
+	Data          *anypb.Any             `protobuf:"bytes,4,opt,name=data,proto3" json:"data,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Sender    string      `protobuf:"bytes,1,opt,name=sender,proto3" json:"sender,omitempty"`
-	SessionId string      `protobuf:"bytes,2,opt,name=sessionId,proto3" json:"sessionId,omitempty"`
-	Type      RequestType `protobuf:"varint,3,opt,name=type,proto3,enum=RequestType" json:"type,omitempty"`
-	Data      *anypb.Any  `protobuf:"bytes,4,opt,name=data,proto3" json:"data,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *SubmitRequest) Reset() {
@@ -244,12 +252,11 @@ func (x *SubmitRequest) GetData() *anypb.Any {
 }
 
 type TssData struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Data          []byte                 `protobuf:"bytes,1,opt,name=data,proto3" json:"data,omitempty"`
+	IsBroadcast   bool                   `protobuf:"varint,2,opt,name=isBroadcast,proto3" json:"isBroadcast,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Data        []byte `protobuf:"bytes,1,opt,name=data,proto3" json:"data,omitempty"`
-	IsBroadcast bool   `protobuf:"varint,2,opt,name=isBroadcast,proto3" json:"isBroadcast,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *TssData) Reset() {
@@ -325,21 +332,24 @@ var file_server_proto_rawDesc = []byte{
 	0x0c, 0x0a, 0x08, 0x49, 0x4e, 0x41, 0x43, 0x54, 0x49, 0x56, 0x45, 0x10, 0x01, 0x12, 0x0b, 0x0a,
 	0x07, 0x53, 0x59, 0x4e, 0x43, 0x49, 0x4e, 0x47, 0x10, 0x02, 0x12, 0x0d, 0x0a, 0x09, 0x4b, 0x45,
 	0x59, 0x47, 0x45, 0x4e, 0x49, 0x4e, 0x47, 0x10, 0x03, 0x12, 0x0b, 0x0a, 0x07, 0x53, 0x49, 0x47,
-	0x4e, 0x49, 0x4e, 0x47, 0x10, 0x04, 0x2a, 0x3d, 0x0a, 0x0b, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x4e, 0x49, 0x4e, 0x47, 0x10, 0x04, 0x2a, 0x65, 0x0a, 0x0b, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
 	0x74, 0x54, 0x79, 0x70, 0x65, 0x12, 0x0a, 0x0a, 0x06, 0x4b, 0x45, 0x59, 0x47, 0x45, 0x4e, 0x10,
 	0x00, 0x12, 0x0a, 0x0a, 0x06, 0x41, 0x43, 0x43, 0x45, 0x50, 0x54, 0x10, 0x01, 0x12, 0x08, 0x0a,
 	0x04, 0x53, 0x49, 0x47, 0x4e, 0x10, 0x02, 0x12, 0x0c, 0x0a, 0x08, 0x46, 0x49, 0x4e, 0x41, 0x4c,
-	0x49, 0x5a, 0x45, 0x10, 0x03, 0x32, 0x6e, 0x0a, 0x03, 0x50, 0x32, 0x50, 0x12, 0x33, 0x0a, 0x06,
-	0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x0f,
-	0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22,
-	0x00, 0x12, 0x32, 0x0a, 0x06, 0x53, 0x75, 0x62, 0x6d, 0x69, 0x74, 0x12, 0x0e, 0x2e, 0x53, 0x75,
-	0x62, 0x6d, 0x69, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f,
-	0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d,
-	0x70, 0x74, 0x79, 0x22, 0x00, 0x42, 0x2b, 0x5a, 0x29, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
-	0x63, 0x6f, 0x6d, 0x2f, 0x68, 0x79, 0x6c, 0x65, 0x2d, 0x74, 0x65, 0x61, 0x6d, 0x2f, 0x74, 0x73,
-	0x73, 0x2d, 0x73, 0x76, 0x63, 0x2f, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x70,
-	0x32, 0x70, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x49, 0x5a, 0x45, 0x10, 0x03, 0x12, 0x07, 0x0a, 0x03, 0x41, 0x43, 0x4b, 0x10, 0x04, 0x12, 0x08,
+	0x0a, 0x04, 0x4e, 0x41, 0x43, 0x4b, 0x10, 0x05, 0x12, 0x13, 0x0a, 0x0f, 0x4e, 0x4f, 0x5f, 0x44,
+	0x41, 0x54, 0x41, 0x5f, 0x54, 0x4f, 0x5f, 0x53, 0x49, 0x47, 0x4e, 0x10, 0x06, 0x32, 0x6e, 0x0a,
+	0x03, 0x50, 0x32, 0x50, 0x12, 0x33, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12, 0x16,
+	0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66,
+	0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x0f, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52,
+	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x32, 0x0a, 0x06, 0x53, 0x75, 0x62,
+	0x6d, 0x69, 0x74, 0x12, 0x0e, 0x2e, 0x53, 0x75, 0x62, 0x6d, 0x69, 0x74, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x00, 0x42, 0x2b, 0x5a,
+	0x29, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x68, 0x79, 0x6c, 0x65,
+	0x2d, 0x74, 0x65, 0x61, 0x6d, 0x2f, 0x74, 0x73, 0x73, 0x2d, 0x73, 0x76, 0x63, 0x2f, 0x69, 0x6e,
+	0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x70, 0x32, 0x70, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x33,
 }
 
 var (
